# pfunit-parameterization-demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  multiply_mod.f90  multiply_prog.f90  unittest_multiply.pf  unittest_multiply_param.pf
.github/workflows/: static_analysis.yaml  test_build.yaml
